// Copy nội dung dưới đây vào dbdiagram.io (menu: Import → DBML)

Table "Users" {
  "Id" integer [pk, increment, note: 'Primary key']
  "Username" varchar(100) [not null]
  "Email" varchar(255) [not null, unique]
  "PasswordHash" text [not null]
  "Role" integer [not null]
  "CreatedAt" timestamptz [not null]
  "IsActive" boolean [not null]
  "FullName" text
  "Phone" text
}

Table "POIs" {
  "Id" integer [pk, increment]
  "Name" varchar(255) [not null]
  "Description" text [not null]
  "Latitude" double [not null]
  "Longitude" double [not null]
  "Radius" double [not null]
  "Priority" integer [not null]
  "OwnerId" integer
  "ImageUrl" text
  "MapLink" text
  "IsActive" boolean [not null]
  "CreatedAt" timestamptz [not null]
  "UpdatedAt" timestamptz [not null]
  "Address" text
  "Category" integer [not null, default: 0]
  "Rating" double
  "ReviewCount" integer [not null, default: 0]
  "TourId" integer
  "EstimatedMinutes" integer [not null, default: 30]
  "FoodType" integer [not null, default: 0]
  "PriceMin" bigint [not null, default: 0]
  "PriceMax" bigint [not null, default: 0]
}

Table "POIContents" {
  "Id" integer [pk, increment]
  "POId" integer [not null]
  "Language" text [not null]
  "TextContent" text
  "AudioUrl" text
  "ContentType" integer [not null]
  "CreatedAt" timestamptz [not null]
}

Table "VisitLogs" {
  "Id" integer [pk, increment]
  "POId" integer [not null]
  "UserId" text
  "VisitTime" timestamptz [not null]
  "Latitude" double
  "Longitude" double
  "VisitType" integer [not null]
  "DurationSeconds" integer
}

Table "Analytics" {
  "Id" integer [pk, increment]
  "POId" integer [not null]
  "POIId" integer [not null]
  "Date" timestamptz [not null]
  "VisitCount" integer [not null]
  "UniqueVisitors" integer [not null]
  "AverageDuration" double [not null]
}

Table "__EFMigrationsHistory" {
  "MigrationId" varchar(150) [pk]
  "ProductVersion" varchar(32) [not null]
}

Ref: "POIs"."OwnerId" > "Users"."Id"
Ref: "POIContents"."POId" > "POIs"."Id" [delete: cascade]
Ref: "VisitLogs"."POId" > "POIs"."Id" [delete: cascade]
Ref: "Analytics"."POIId" > "POIs"."Id" [delete: cascade]
